fixed coding style and improved readability

--- a/src/components/Carousel-card/Carousel-card.scss
+++ b/src/components/Carousel-card/Carousel-card.scss
@@ -6,22 +6,24 @@
 	left: 0;
 	transform: translateX(-50%);
 
-	.card-img {
-		max-width: 185px;
-		border-radius: 15px;
-		&:hover {
-			cursor: pointer;
-			filter: brightness(50%);
+	.card {
+		&-img {
+			max-width: 185px;
+			border-radius: 15px;
+			&:hover {
+				cursor: pointer;
+				filter: brightness(50%);
+			}
 		}
-	}
-	.card-title {
-		font-family: "Roboto", sans-serif;
-		font-size: 15px;
-		color: white;
-		white-space: nowrap;
-		overflow: hidden;
-		text-overflow: ellipsis;
-		padding: 2px 2px;
+		&-title {
+			font-family: "Roboto", sans-serif;
+			font-size: 15px;
+			color: white;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			padding: 2px 2px;
+		}
 	}
 	.sub-container {
 		font-family: "Roboto", sans-serif;
